# gfx-workshops

./: .gitignore  CMakeLists.txt  LICENSE  README.md
glad/include/glad/: glad.h
glad/src/: glad.c
workshop01/: CMakeLists.txt  fragment_shader.glsl  fragment_shader_raytrace.glsl  vertex_shader.glsl  vertex_shader_quad.glsl  workshop01.cpp
